Inmob-Salesforce/force-app/main/default/objects/OficialesCreditoCobranzas__c/OficialesCreditoCobranzas__c.object-meta.xml
<CustomObject>
    <label>Oficial Crédito / Cobranza</label>
    <nameField>
        <displayFormat>OCC-{00000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oficiales Crédito / Cobranzas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>