Inmob-Salesforce/force-app/main/default/objects/OficialesCreditoCobranzas__c/fields/Oficial__c.field-meta.xml
<CustomField>
    <fullName>Oficial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oficial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OficialesCreditoCobranzas</relationshipName>
    <type>Lookup</type>
</CustomField>