Inmob-Salesforce/force-app/main/default/objects/OficialesCreditoCobranzas__c/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyecto</label>
    <referenceTo>Proyecto__c</referenceTo>
    <relationshipLabel>Oficiales Crédito / Cobranzas</relationshipLabel>
    <relationshipName>OficialesCreditoCobranzas</relationshipName>
    <type>Lookup</type>
</CustomField>