Inmob-Salesforce/force-app/main/default/objects/OficialesCreditoCobranzas__c/fields/UltimoContratoAsignado__c.field-meta.xml
<CustomField>
    <fullName>UltimoContratoAsignado__c</fullName>
    <label>Último Contrato Asignado</label>
    <type>DateTime</type>
</CustomField>